--- a/PADI-DSTM/MasterServer/MasterServer.csproj
+++ b/PADI-DSTM/MasterServer/MasterServer.csproj
@@ -47,6 +47,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PadiDstmLibrary\PadiDstmLibrary.csproj">
+      <Project>{7aa967d5-3754-4fc0-b7d9-b2183de27936}</Project>
+      <Name>PadiDstmLibrary</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
