--- a/PADI-DSTM/PadiDstmLibrary/PadiDstmLibrary.csproj
+++ b/PADI-DSTM/PadiDstmLibrary/PadiDstmLibrary.csproj
@@ -42,6 +42,12 @@
     <Compile Include="PadiDstmLibrary.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CommonTypes\CommonTypes.csproj">
+      <Project>{2d67d43c-ba48-4466-85e6-6cc040939a45}</Project>
+      <Name>CommonTypes</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
