--- a/PADI-DSTM/Server/DataServer.csproj
+++ b/PADI-DSTM/Server/DataServer.csproj
@@ -42,9 +42,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckPrimaryLife.cs" />
     <Compile Include="DataServer.cs" />
     <Compile Include="IDataServerImp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SayIamAlive.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
