--- a/PADI-DSTM/ClientApplicationForm/ClientApplication.csproj
+++ b/PADI-DSTM/ClientApplicationForm/ClientApplication.csproj
@@ -44,13 +44,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ClientApplication.cs" />
     <Compile Include="GUI.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="GUI.Designer.cs">
       <DependentUpon>GUI.cs</DependentUpon>
     </Compile>
-    <Compile Include="ClientApplication.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="GUI.resx">
       <DependentUpon>GUI.cs</DependentUpon>
@@ -82,9 +82,9 @@
       <Project>{2d67d43c-ba48-4466-85e6-6cc040939a45}</Project>
       <Name>CommonTypes</Name>
     </ProjectReference>
-    <ProjectReference Include="..\PADI-DSTM\PADI-DSTM.csproj">
-      <Project>{966e92be-9872-43f0-897e-4152d7b562d1}</Project>
-      <Name>PADI-DSTM</Name>
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj">
+      <Project>{bca6e880-4753-4a05-bb60-ec1695d26cd8}</Project>
+      <Name>CustomExceptions</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
