--- a/PADI-DSTM/CommonTypes/CommonTypes.csproj
+++ b/PADI-DSTM/CommonTypes/CommonTypes.csproj
@@ -32,6 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Remoting" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -40,7 +41,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CommonTypes.cs" />
+    <Compile Include="PadiDstm.cs" />
+    <Compile Include="PadInt.cs" />
+    <Compile Include="PadIntServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TansactionalManager.cs" />
+    <Compile Include="TID.cs" />
+    <Compile Include="Transaction.cs" />
+    <Compile Include="TransactionalSystem.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj">
+      <Project>{bca6e880-4753-4a05-bb60-ec1695d26cd8}</Project>
+      <Name>CustomExceptions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
