--- a/PADI-DSTM/Server/DataServer.csproj
+++ b/PADI-DSTM/Server/DataServer.csproj
@@ -54,6 +54,10 @@
       <Project>{2d67d43c-ba48-4466-85e6-6cc040939a45}</Project>
       <Name>CommonTypes</Name>
     </ProjectReference>
+    <ProjectReference Include="..\CustomExceptions\CustomExceptions.csproj">
+      <Project>{bca6e880-4753-4a05-bb60-ec1695d26cd8}</Project>
+      <Name>CustomExceptions</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
